--- a/css/main.css
+++ b/css/main.css
@@ -56,10 +56,10 @@ h2 {
     position:absolute;
     left: 50%;
     top: 50%;
-    width: 660px;
-    height: 400px;
-    margin-top: -350px;
-    margin-left: -330px;
+    width: 60%;
+    height: 40%;
+    margin-top: -20%;
+    margin-left: -30%;
 }
 
 #main {
@@ -68,12 +68,22 @@ h2 {
     width: 60%;
 }
 
-#contact a{
-    color: #6B6C6E ;
+#contact {
     text-decoration: none;
     font-family: "FuturaStd-Condensed" ;
     font-weight: bold;
-    font-size: 2em;
+    font-size: 2.2em;
+    color: #6B6C6E ;
+}
+
+#cv {
+    text-decoration: none;
+    font-family: "FuturaStd-Condensed" ;
+    font-weight: bold;
+    font-size: 3.2em;
+    color: #E8B2A9 ;
+    float: right;
+
 }
 
 #realisations {
@@ -85,27 +95,29 @@ h2 {
     text-decoration: none;
     font-family: "FuturaStd-Condensed" ;
     font-weight: bold;
-    font-size: 2em;
+    font-size: 2.2em;
 }
 
-#cv {
-    text-align: right;
+.rotate_35 {
+    transform:rotate(35deg);
+    -ms-transform:rotate(35deg);
+    -moz-transform: rotate(35deg);
+    -webkit-transform: rotate(35deg);
+    -o-transform:rotate(35deg);
 }
 
-#cv a{
-    color: #E8B2A9 ;
-    text-decoration: none;
-    font-family: "FuturaStd-Condensed" ;
-    font-weight: bold;
-    font-size: 2.5em;
+.rotate_minus_15 {
+    transform:rotate(-15deg);
+    -ms-transform:rotate(-15deg);
+    -moz-transform: rotate(-15deg);
+    -webkit-transform: rotate(-15deg);
+    -o-transform:rotate(-15deg);
 }
 
-.rotate_10 {
-  -moz-transform: rotate(10deg);
-  -webkit-transform: rotate(10deg);
-}
-
-.rotate_minus_10 {
-  -moz-transform: rotate(-10deg);
-  -webkit-transform: rotate(-10deg);
+a:hover {
+    transform:rotate(0deg);
+    -ms-transform:rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -webkit-transform: rotate(0deg);
+    -o-transform:rotate(0deg);
 }
