--- a/css/main.css
+++ b/css/main.css
@@ -17,19 +17,24 @@
 }
 
 
-html {
+html,body {
     padding: 0;
     margin: 0;
     font-family: "FuturaStd" ;
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
 }
 
-body {
-    padding: 0;
-    margin: 0;
-    background-image:url('/img/gribouillis.png');
-    background-repeat: no-repeat;
-    background-position: 48% 10%;
-    background-color: #E3E3E3;
+#full-screen-background-image {
+  z-index: -999;
+  min-height: 100%;
+  min-width: 1024px;
+  width: 100%;
+  height: auto;
+  position: fixed;
+  top: 0;
+  left: 0;
 }
 
 h1 {
