--- a/css/main.css
+++ b/css/main.css
@@ -64,7 +64,7 @@ h2 {
     width: 60%;
     height: 40%;
     margin-top: -20%;
-    margin-left: -30%;
+    margin-left: -27%;
 }
 
 #main {
@@ -73,12 +73,18 @@ h2 {
     width: 60%;
 }
 
+#perso {
+    margin-bottom: -2em;
+    width: 80%;
+}
+
 #contact {
     text-decoration: none;
     font-family: "FuturaStd-Condensed" ;
     font-weight: bold;
     font-size: 2.2em;
     color: #6B6C6E ;
+    float: left;
 }
 
 #cv {
@@ -101,6 +107,7 @@ h2 {
     font-family: "FuturaStd-Condensed" ;
     font-weight: bold;
     font-size: 2.2em;
+    float: right;
 }
 
 .rotate_35 {
