--- a/css/main.css
+++ b/css/main.css
@@ -24,6 +24,7 @@ html,body {
     height: 100%;
     width: 100%;
     overflow: hidden;
+    color: #000 ;
 }
 
 #full-screen-background-image {
@@ -55,6 +56,19 @@ h2 {
     font-size: 1.7em;
     margin-top: 0px;
     letter-spacing: 2px;
+}
+
+h3 {
+    font-family: "FuturaStd-Condensed" , Arial;
+    font-weight: bold;
+    font-size: 2.2em;
+    color: #6B6C6E ;
+    margin-top: 1.5em;
+}
+
+p {
+    text-align: justify;
+    width: 80%;
 }
 
 #container {
