--- a/css/inside.css
+++ b/css/inside.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #E8E8E8 ;
+    background-color: none ;
 }
 
 header {
@@ -10,6 +10,7 @@ header {
     background-image: url('/img/root-min.png') ;
     background-repeat: no-repeat;
     height: 800px ;
+    margin-left: 25px;
 }
 
 .content {
