--- a/css/main-test.css
+++ b/css/main-test.css
@@ -26,12 +26,10 @@ html,body {
     overflow: hidden;
     color: #000 ;
     /*
-
-       background-image:url(/img/background4.jpg);
+       background-image:url(/img/background5.jpg);
        background-size: cover;
        background-attachment: fixed;
-    */
-
+*/
 }
 
 div {
@@ -65,43 +63,18 @@ h1 span {
 h2 {
     font-family: "FuturaStd-Condensed", Arial ;
     font-weight: lighter;
-    font-size: 1.0em;
-    margin-top: 0px;
-    letter-spacing: 2px;
-}
-
-h3 {
-    font-family: "FuturaStd-Condensed" , Arial;
-    font-weight: bold;
-    font-size: 2.2em;
-    color: #6B6C6E ;
-    margin-top: 1.5em;
-}
-
-p {
-    text-align: justify;
+    font-size: 1.1em;
+    letter-spacing: 2.3px;
 }
 
 #container {
     position:absolute;
-    left: 50%;
-    top: 18%;
-    width: 50%;
-    height: 40%;
-  /*  margin-top: -15%;*/
-    margin-left: -19%;
 }
 
-#first {
-    margin-right: 25%;
-}
-
-#second {
-    margin-left: 20%;
-}
-
-#third {
-    margin-right: 10%;
+#contact {
+    position: absolute;
+    left: 400px;
+    top: 180px;
 }
 
 #contact a {
@@ -110,11 +83,12 @@ p {
     font-weight: bold;
     font-size: 1.6em;
     color: #6B6C6E ;
-    float: left;
 }
 
 #cv {
-    margin-left: 10px;
+    position: absolute;
+    left: 820px;
+    top: 180px;
 }
 
 #cv a {
@@ -123,10 +97,18 @@ p {
     font-weight: bold;
     font-size: 2.8em;
     color: #E8B2A9 ;
-    float: right;
 }
 
 #title {
+    position: absolute;
+    left: 520px;
+    top: 215px;
+}
+
+#realisations {
+    position: absolute;
+    left: 780px;
+    top: 315px;
 }
 
 #realisations a {
@@ -135,7 +117,6 @@ p {
     font-family: "FuturaStd-Condensed" , Arial;
     font-weight: bold;
     font-size: 1.6em;
-    float: right;
 }
 
 .rotate_35 {
