--- a/css/main.css
+++ b/css/main.css
@@ -25,29 +25,34 @@ html,body {
     width: 100%;
     overflow: hidden;
     color: #000 ;
-    /*
+}
 
-       background-image:url(/img/background4.jpg);
-       background-size: cover;
-       background-attachment: fixed;
-    */
+img.bg {
+        /* Set rules to fill background */
+        min-height: 100%;
+        min-width: 1024px;
 
+        /* Set up proportionate scaling */
+        width: 100%;
+        height: auto;
+
+        /* Set up positioning */
+        position: fixed;
+        top: 0;
+        left: 0;
+}
+
+@media screen and (max-width: 1024px) { /* Specific to this particular image */
+        img.bg {
+                left: 50%;
+                margin-left: -512px;   /* 50% */
+        }
 }
 
 div {
     /*border: 1px solid;*/
 }
 
-#full-screen-background-image {
-  z-index: -999;
-  min-height: 100%;
-  min-width: 1024px;
-  width: 100%;
-  height: auto;
-  position: fixed;
-  top: 0;
-  left: 0;
-}
 
 h1 {
     color: #3D9926 ;
