--- a/css/main.css
+++ b/css/main.css
@@ -27,32 +27,34 @@ html,body {
 }
 
 img.grib {
-   position: absolute;
-   height: 250px ;
-   margin-left:41%;
-   margin-top:8%;
+    position: absolute;
+    height: 250px ;
+    margin-left:41%;
+    margin-top:8%;
 }
 
 img.bg {
-        /* Set rules to fill background */
-        min-height: 100%;
-        min-width: 1024px;
+    /* Set rules to fill background */
+    min-height: 100%;
+    min-width: 1024px;
 
-        /* Set up proportionate scaling */
-        width: 100%;
-        height: auto;
+    /* Set up proportionate scaling */
+    width: 100%;
+    height: auto;
 
-        /* Set up positioning */
-        position: fixed;
-        top: 0;
-        left: 0;
+    /* Set up positioning */
+    position: fixed;
+    top: 0;
+    left: 0;
+
+    z-index: -100;
 }
 
 @media screen and (max-width: 1024px) { /* Specific to this particular image */
-        img.bg {
-                left: 50%;
-                margin-left: -512px;   /* 50% */
-        }
+    img.bg {
+        left: 50%;
+        margin-left: -512px;   /* 50% */
+    }
 }
 
 div {
@@ -161,7 +163,7 @@ p {
     -o-transform:rotate(-15deg);
 }
 
-a:hover {
+a.rotate_hover:hover {
     transform:rotate(-35deg);
     -webkit-transform: rotate(-35deg);
     -ms-transform:rotate(-35deg);
