--- a/css/menu.css
+++ b/css/menu.css
@@ -12,7 +12,7 @@
 }
 #nav a, #nav a:link {
     background: #3D9936 url(/img/navMenu.png) no-repeat;
-    color: #000;
+    color: #E8E7EE;
     display: block;
     width:90px;
     padding: 13px 15px 13px 40px;
