--- a/css/menu.css
+++ b/css/menu.css
@@ -17,7 +17,7 @@
     width:90px;
     padding: 13px 15px 13px 40px;
     text-decoration: none;
-    border-bottom:1px solid #2B3033;
+    border-bottom:1px solid #E8E7EE;
 }
 #nav a:hover {
     background:#E8B2A9 url(/img/navMenu.png) no-repeat;
