plus de background image sur les smartphone

--- a/css/main.css
+++ b/css/main.css
@@ -52,8 +52,10 @@ img.bg {
 
 @media screen and (max-width: 1024px) { /* Specific to this particular image */
     img.bg {
-        left: 50%;
-        margin-left: -512px;   /* 50% */
+        display: none;
+    }
+    html {
+        background-color: #ECEDED ;
     }
 }
 
