last version avant changement

--- a/css/main.css
+++ b/css/main.css
@@ -110,13 +110,14 @@ p {
     height: 100%;
 }
 
-p,
-ul {
+p, ul {
   margin: 0;
   padding: 0;
 }
+
 p {
   margin-bottom: 20px;
+  margin-top: 10px;
   font-size: 15px;
   line-height: 18px;
 }
