--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,24 @@
     font-style: normal;
 }
 
+@font-face {
+    font-family: "FuturaStd-Condensed" ;
+    font-weight: bold;
+    src: url('fonts/FuturaStd-CondensedBold.otf');
+}
+
+@font-face {
+    font-family: "FuturaStd-Condensed";
+    font-weight: lighter;
+    src: url('fonts/FuturaStd-CondensedLight.otf');
+}
+
+@font-face {
+    font-family: "FuturaStd";
+    font-weight: normal;
+    src: url('fonts/FuturaStd-Medium.otf');
+}
+
 /*********************************************************************************/
 /* Basic                                                                         */
 /*********************************************************************************/
@@ -102,9 +120,18 @@
 
 	h1, h2, h3, h4,h5, h6
 	{
-		font-weight: 400;
+        font-family: "FuturaStd-Condensed",Arial;
+		font-weight: bold;
 		color: #3D9926;
 	}
+
+    h1 {
+		font-weight: bold;
+    }
+
+    h1 span {
+        color: #E8B2A9;
+    }
 
 	blockquote
 	{
