capture d'ecran propre

--- a/css/style-desktop.css
+++ b/css/style-desktop.css
@@ -27,7 +27,7 @@
 		font-size: 14pt;
 		line-height: 1.75em;
 	}
-	
+
 	h1
 	{
 		font-size: 2.4em;
@@ -39,22 +39,28 @@
 		font-size: 1.8em;
 		letter-spacing: -0.015em;
 	}
-	
+
 	h3, h4, h5, h6
 	{
 		font-size: 1.25em;
 		letter-spacing: -0.015em;
 	}
-	
+
 	header
 	{
 		margin: 0 0 1.5em 0;
 	}
 
+    .diapo {
+        border: 10px solid #FFFFFF;
+        box-shadow: 1px 1px 12px #555555;
+        -webkit-box-shadow: 1px 1px 12px #555;
+    }
+
 	ul.links
 	{
 	}
-	
+
 		ul.links li
 		{
 		}
@@ -73,13 +79,13 @@
 		{
 			font-size: 0.75em;
 		}
-		
+
 		.button-big
 		{
 			font-size: 1.25em;
 			padding: 0.5em 1.25em 0.5em 1.25em;
 		}
-		
+
 		.button-huge
 		{
 			font-size: 1.5em;
@@ -94,16 +100,16 @@
 	.is-gallery
 	{
 	}
-	
+
 		.is-gallery .image
 		{
 			margin: 0;
 		}
-		
+
 /*********************************************************************************/
 /* Wrapper                                                                       */
 /*********************************************************************************/
-			
+
 	#wrapper
 	{
 		width: 45em;
@@ -115,18 +121,18 @@
 		{
 			padding-bottom: 6em;
 		}
-	
+
 /*********************************************************************************/
 /* Nav                                                                           */
 /*********************************************************************************/
-	
+
 	#nav
 	{
 		text-align: center;
 		height: 4.25em;
 		cursor: default;
 	}
-	
+
 		#nav a
 		{
 			font-size: 2.5em;
@@ -152,7 +158,7 @@
 				-ms-transition: border-bottom-width .25s ease-in-out;
 				transition: border-bottom-width .25s ease-in-out;
 			}
-		
+
 			#nav a span
 			{
 				display: block;
@@ -165,12 +171,12 @@
 				line-height: 2.25em;
 				left: 50%;
 				opacity: 0;
-				
+
 				/* Labels not wide enough? Increase its width below and set margin-left to ((width / 2) * -1) */
 				width: 5.5em;
 				margin-left: -2.75em;
 			}
-			
+
 				#nav a span:after
 				{
 					content: '';
@@ -192,8 +198,8 @@
 				#nav a:hover span
 				{
 					opacity: 1.0;
-				}	
-			
+				}
+
 			#nav a.active
 			{
 				opacity: 1.0;
@@ -203,7 +209,7 @@
 				{
 					border-bottom-width: 0.5em;
 				}
-			
+
 /*********************************************************************************/
 /* Panels                                                                        */
 /*********************************************************************************/
@@ -223,15 +229,15 @@
 		left: 0;
 		width: 45em;
 	}
-	
+
 	/* Me */
-	
+
 		#me
 		{
 			padding: 0;
 			height: 20em;
 		}
-		
+
 			#me .pic
 			{
 				display: block;
@@ -241,14 +247,14 @@
 				height: 100%;
 				text-decoration: none;
 			}
-			
+
 				#me .pic img
 				{
 					position: relative;
 					display: block;
 					height: 100%;
 				}
-			
+
 				#me .pic .arrow
 				{
 					display: block;
@@ -276,19 +282,19 @@
 					{
 						padding-right: 0;
 					}
-			
+
 					#me .pic .arrow span
 					{
 						display: block;
 						text-indent: -9999em;
 					}
-				
+
 					#me .pic:hover .arrow
 					{
 						width: 3em;
 						padding-right: 0.25em;
 					}
-			
+
 			#me header
 			{
 				position: absolute;
@@ -298,7 +304,7 @@
 				height: 100%;
 				margin-left: 2.5em;
 			}
-			
+
 			#me h1
 			{
 				position: absolute;
@@ -306,7 +312,7 @@
 				bottom: 52.5%;
 				margin: 0;
 			}
-			
+
 			#me .byline
 			{
 				position: absolute;
